--- a/ROOT/WebContent/src.common/css/reset.css
+++ b/ROOT/WebContent/src.common/css/reset.css
@@ -1,4 +1,4 @@
-*{margin: 0;padding: 0;list-style: none;-moz-user-select:-moz-none;-webkit-user-select:none }
+*{margin: 0;padding: 0;list-style: none; }
 /*
 KISSY CSS Reset
 理念：1. reset 的目的不是清除浏览器的默认样式，这仅是部分工作。清除和重置是紧密不可分的。
@@ -7,6 +7,13 @@ KISSY CSS Reset
 特色：1. 适应中文；2. 基于最新主流浏览器。
 维护：玉伯<lifesinger@gmail.com>, 正淳<ragecarrier@gmail.com>
  */
+
+/**文本不可选中**/
+body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, /* structural elements 结构元素 */
+dl, dt, dd, ul, ol, li/* list elements 列表元素 */{
+  -moz-user-select:-moz-none;
+  -webkit-user-select:none;
+}
 
 /** 清除内外边距 **/
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, /* structural elements 结构元素 */
