--- a/ROOT/WebContent/src.common/css/reset.css
+++ b/ROOT/WebContent/src.common/css/reset.css
@@ -49,6 +49,42 @@ fieldset, img { border: 0; } /* img 搭车：让链接里的 img 无边框 */
 button, input, select, textarea { font-size: 100%; } /* 使得表单元素在 ie 下能继承字体大小 */
 /* 注：optgroup 无法扶正 */
 
+/** iframe **/
+iframe{
+	border:0px;
+}
+
+input[type="range"] {
+    -webkit-box-shadow: 0 1px 0 0px #424242, 0 1px 0 #060607 inset, 0px 2px 10px 0px black inset, 1px 0px 2px rgba(0, 0, 0, 0.4) inset, 0 0px 1px rgba(0, 0, 0, 0.6) inset;
+    margin-top: 2px;
+    background-color: #272728;
+ 	border-radius: 15px;
+    width: 80%;
+    -webkit-appearance: none;
+    height:10px;
+}
+input[type="range"]::-webkit-slider-thumb {
+     -webkit-appearance: none;
+     cursor: default;
+     top: -5px;
+     height: 30px;
+     width: 20px;
+     transform: translateY(-4px);
+     background: none repeat scroll 0 0 #777;
+     border-radius: 15px;
+     -webkit-box-shadow: 0 -1px 1px black inset;
+}
+input[type="range"]::-moz-range-track {
+    border: 1px solid #a0b3d6;
+    height: 20px;
+    background: #f0f3f9;
+}
+input[type="range"]::-moz-range-thumb {
+    background: #34538b;
+    height: 30px;
+}
+
+
 /** 重置表格元素 **/
 table { border-collapse: collapse; border-spacing: 0; }
 
