add ft-progress repaired progress

--- a/ROOT/WebContent/src.common/css/reset.css
+++ b/ROOT/WebContent/src.common/css/reset.css
@@ -55,33 +55,29 @@ iframe{
 }
 
 input[type="range"] {
-    -webkit-box-shadow: 0 1px 0 0px #424242, 0 1px 0 #060607 inset, 0px 2px 10px 0px black inset, 1px 0px 2px rgba(0, 0, 0, 0.4) inset, 0 0px 1px rgba(0, 0, 0, 0.6) inset;
-    margin-top: 2px;
-    background-color: #272728;
- 	border-radius: 15px;
+	 margin-top: 2px;
+    background-color: rgb(176,224,230);
     width: 80%;
     -webkit-appearance: none;
-    height:10px;
+    height:30px;
 }
 input[type="range"]::-webkit-slider-thumb {
      -webkit-appearance: none;
      cursor: default;
-     top: -5px;
      height: 30px;
      width: 20px;
-     transform: translateY(-4px);
-     background: none repeat scroll 0 0 #777;
-     border-radius: 15px;
+     background: none repeat scroll 0 0 rgb(0,200,140);
      -webkit-box-shadow: 0 -1px 1px black inset;
 }
 input[type="range"]::-moz-range-track {
-    border: 1px solid #a0b3d6;
-    height: 20px;
-    background: #f0f3f9;
+    height: 30px;
+    background-color: rgb(176,224,230);
 }
 input[type="range"]::-moz-range-thumb {
     background: #34538b;
     height: 30px;
+    border-radius:0px;
+    background: none repeat scroll 0 0 rgb(0,200,140);
 }
 
 
